# HPX_Algorithm_Performance

./: CMakeLists.txt  CMakePresets.json  plot.py  run.py
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  main.hpp  utilities.hpp
src/algorithms/copy_if/: CMakeLists.txt  copy_if.hpp  hpx_par.cpp  hpx_seq.cpp  std_par.cpp  std_seq.cpp
src/algorithms/for_each/: CMakeLists.txt  for_each.hpp  hpx_par.cpp  hpx_seq.cpp  std_par.cpp  std_seq.cpp
src/algorithms/transform/: hpx_par.cpp  hpx_seq.cpp  std_par.cpp  std_seq.cpp  transform.hpp
